firmware/build/log/idf_py_stdout_output_62910
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/cdbeer/dev/mochi-esp/firmware/build/bootloader/esp-idf/esptool_py && /Users/cdbeer/.espressif/python_env/idf5.3_py3.12_env/bin/python /Users/cdbeer/dev/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/cdbeer/dev/mochi-esp/firmware/build/bootloader/bootloader.bin
Bootloader binary size 0x5390 bytes. 0x2c70 bytes (35%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
/Users/cdbeer/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20250707/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.3.5-506-g0cf21f6beb\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/cdbeer/dev/mochi-esp/firmware/build/config -I/Users/cdbeer/dev/mochi-esp/firmware/main -I/Users/cdbeer/dev/mochi-esp/firmware/vendor/waveshare-eink -I/Users/cdbeer/dev/esp-idf/components/newlib/platform_include -I/Users/cdbeer/dev/esp-idf/components/freertos/config/include -I/Users/cdbeer/dev/esp-idf/components/freertos/config/include/freertos -I/Users/cdbeer/dev/esp-idf/components/freertos/config/xtensa/include -I/Users/cdbeer/dev/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/cdbeer/dev/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/cdbeer/dev/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/cdbeer/dev/esp-idf/components/freertos/esp_additions/include -I/Users/cdbeer/dev/esp-idf/components/esp_hw_support/include -I/Users/cdbeer/dev/esp-idf/components/esp_hw_support/include/soc -I/Users/cdbeer/dev/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/cdbeer/dev/esp-idf/components/esp_hw_support/dma/include -I/Users/cdbeer/dev/esp-idf/components/esp_hw_support/ldo/include -I/Users/cdbeer/dev/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/cdbeer/dev/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/cdbeer/dev/esp-idf/components/heap/include -I/Users/cdbeer/dev/esp-idf/components/log/include -I/Users/cdbeer/dev/esp-idf/components/soc/include -I/Users/cdbeer/dev/esp-idf/components/soc/esp32s3 -I/Users/cdbeer/dev/esp-idf/components/soc/esp32s3/include -I/Users/cdbeer/dev/esp-idf/components/hal/platform_port/include -I/Users/cdbeer/dev/esp-idf/components/hal/esp32s3/include -I/Users/cdbeer/dev/esp-idf/components/hal/include -I/Users/cdbeer/dev/esp-idf/components/esp_rom/include -I/Users/cdbeer/dev/esp-idf/components/esp_rom/include/esp32s3 -I/Users/cdbeer/dev/esp-idf/components/esp_rom/esp32s3 -I/Users/cdbeer/dev/esp-idf/components/esp_common/include -I/Users/cdbeer/dev/esp-idf/components/esp_system/include -I/Users/cdbeer/dev/esp-idf/components/esp_system/port/soc -I/Users/cdbeer/dev/esp-idf/components/esp_system/port/include/private -I/Users/cdbeer/dev/esp-idf/components/xtensa/esp32s3/include -I/Users/cdbeer/dev/esp-idf/components/xtensa/include -I/Users/cdbeer/dev/esp-idf/components/xtensa/deprecated_include -I/Users/cdbeer/dev/esp-idf/components/lwip/include -I/Users/cdbeer/dev/esp-idf/components/lwip/include/apps -I/Users/cdbeer/dev/esp-idf/components/lwip/include/apps/sntp -I/Users/cdbeer/dev/esp-idf/components/lwip/lwip/src/include -I/Users/cdbeer/dev/esp-idf/components/lwip/port/include -I/Users/cdbeer/dev/esp-idf/components/lwip/port/freertos/include -I/Users/cdbeer/dev/esp-idf/components/lwip/port/esp32xx/include -I/Users/cdbeer/dev/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/cdbeer/dev/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/cdbeer/dev/esp-idf/components/driver/deprecated -I/Users/cdbeer/dev/esp-idf/components/driver/i2c/include -I/Users/cdbeer/dev/esp-idf/components/driver/touch_sensor/include -I/Users/cdbeer/dev/esp-idf/components/driver/twai/include -I/Users/cdbeer/dev/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/cdbeer/dev/esp-idf/components/esp_pm/include -I/Users/cdbeer/dev/esp-idf/components/esp_ringbuf/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_gpio/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_pcnt/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_gptimer/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_spi/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_mcpwm/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_i2s/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_sdmmc/include -I/Users/cdbeer/dev/esp-idf/components/sdmmc/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_sdspi/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_sdio/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_dac/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_rmt/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_tsens/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_sdm/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_i2c/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_uart/include -I/Users/cdbeer/dev/esp-idf/components/vfs/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_ledc/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_parlio/include -I/Users/cdbeer/dev/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/cdbeer/dev/esp-idf/components/esp_timer/include -I/Users/cdbeer/dev/esp-idf/components/esp_psram/include -I/Users/cdbeer/dev/esp-idf/components/spi_flash/include -I/Users/cdbeer/dev/esp-idf/components/nvs_flash/include -I/Users/cdbeer/dev/esp-idf/components/esp_partition/include -I/Users/cdbeer/dev/esp-idf/components/esp_wifi/include -I/Users/cdbeer/dev/esp-idf/components/esp_wifi/include/local -I/Users/cdbeer/dev/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/cdbeer/dev/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/cdbeer/dev/esp-idf/components/esp_event/include -I/Users/cdbeer/dev/esp-idf/components/esp_phy/include -I/Users/cdbeer/dev/esp-idf/components/esp_phy/esp32s3/include -I/Users/cdbeer/dev/esp-idf/components/esp_netif/include -I/Users/cdbeer/dev/esp-idf/components/esp_http_server/include -I/Users/cdbeer/dev/esp-idf/components/http_parser -I/Users/cdbeer/dev/esp-idf/components/esp_http_client/include -I/Users/cdbeer/dev/esp-idf/components/esp-tls -I/Users/cdbeer/dev/esp-idf/components/esp-tls/esp-tls-crypto -I/Users/cdbeer/dev/esp-idf/components/mbedtls/port/include -I/Users/cdbeer/dev/esp-idf/components/mbedtls/mbedtls/include -I/Users/cdbeer/dev/esp-idf/components/mbedtls/mbedtls/library -I/Users/cdbeer/dev/esp-idf/components/mbedtls/esp_crt_bundle/include -I/Users/cdbeer/dev/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/Users/cdbeer/dev/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/Users/cdbeer/dev/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/Users/cdbeer/dev/esp-idf/components/esp_adc/include -I/Users/cdbeer/dev/esp-idf/components/esp_adc/interface -I/Users/cdbeer/dev/esp-idf/components/esp_adc/esp32s3/include -I/Users/cdbeer/dev/esp-idf/components/esp_adc/deprecated/include -I/Users/cdbeer/dev/mochi-esp/firmware/managed_components/joltwallet__littlefs/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/cdbeer/dev/mochi-esp/firmware=. -fmacro-prefix-map=/Users/cdbeer/dev/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c /Users/cdbeer/dev/mochi-esp/firmware/main/main.cpp
/Users/cdbeer/dev/mochi-esp/firmware/main/main.cpp: In function 'void app_main()':
/Users/cdbeer/dev/mochi-esp/firmware/main/main.cpp:375:9: error: 'cache_ok' was not declared in this scope
  375 |     if (cache_ok) {
      |         ^~~~~~~~
ninja: build stopped: subcommand failed.
